添加了用户注册，登陆功能

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>admin</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.huicong.api</groupId>
+            <artifactId>ui</artifactId>
+            <version>1.0</version>
+        </dependency>
         <!-- servlet -->
         <dependency>
             <groupId>javax.servlet</groupId>
