--- a/server/src/main/resources/profiles/test.properties
+++ b/server/src/main/resources/profiles/test.properties
@@ -5,6 +5,10 @@ profile.env=test
 ##### admin #####
 zheng.admin.version=1.0
 
+##### ui web front end #####
+ui.name=ui
+ui.version=1.0
+
 ##### zheng-config #####
 zheng.config.path=http://config.zhangshuzheng.cn:1000/${app.name}/${profile.env}
 
