--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>service</module>
         <module>server</module>
         <module>admin</module>
+        <module>ui</module>
     </modules>
     <packaging>pom</packaging>
 
