--- a/common/pom.xml
+++ b/common/pom.xml
@@ -288,6 +288,11 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.huicong.api</groupId>
+            <artifactId>lock-plugin</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
