--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,6 @@
         <module>server</module>
         <module>admin</module>
         <module>ui</module>
-        <module>lock_plugin</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -37,7 +36,6 @@
         <mybatis-ehcache.version>1.0.0</mybatis-ehcache.version>
         <ehcache.version>2.10.0</ehcache.version>
         <shiro.version>1.3.2</shiro.version>
-        <slf4j-api>1.7.12</slf4j-api>
 
         <thymeleaf.version>3.0.3.RELEASE</thymeleaf.version>
     </properties>
@@ -188,12 +186,12 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>${slf4j-api}</version>
+                <version>1.7.12</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-log4j12</artifactId>
-                <version>${slf4j-api}</version>
+                <version>1.7.12</version>
             </dependency>
             <!-- 上传 -->
             <dependency>
