--- a/server/pom.xml
+++ b/server/pom.xml
@@ -20,6 +20,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-servlet_3.0_spec</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.huicong.api</groupId>
             <artifactId>service</artifactId>
             <version>1.0</version>
@@ -38,7 +43,6 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
