1, 添加httpclient 2, 会议管理功能

--- a/server/src/main/resources/profiles/test.properties
+++ b/server/src/main/resources/profiles/test.properties
@@ -33,11 +33,11 @@ zheng.oss.aliyun.oss.policy=http://oss.zhangshuzheng.cn:7771/aliyun/oss/policy
 
 ##### jdbc #####
 datasource.master.jdbc.driver=com.mysql.jdbc.Driver
-datasource.master.jdbc.url=jdbc\:mysql\://192.168.0.105\:3306/plaza?useUnicode\=true&characterEncoding\=utf-8&autoReconnect\=true
+datasource.master.jdbc.url=jdbc\:mysql\://192.168.0.101\:3306/activiti?useUnicode\=true&characterEncoding\=utf-8&autoReconnect\=true
 datasource.master.jdbc.username=plaza
 datasource.master.jdbc.password=g05kxoKAa+qzODorZjj0EQ==
 datasource.slave.jdbc.driver=com.mysql.jdbc.Driver
-datasource.slave.jdbc.url=jdbc\:mysql\://192.168.0.105\:3306/plaza_slave?useUnicode\=true&characterEncoding\=utf-8&autoReconnect\=true
+datasource.slave.jdbc.url=jdbc\:mysql\://192.168.0.101\:3306/activiti?useUnicode\=true&characterEncoding\=utf-8&autoReconnect\=true
 datasource.slave.jdbc.username=plaza
 datasource.slave.jdbc.password=g05kxoKAa+qzODorZjj0EQ==
 
