--- a/server/src/main/resources/profiles/dev.properties
+++ b/server/src/main/resources/profiles/dev.properties
@@ -1,17 +1,13 @@
-app.name=zheng-upms-server
-profile.env=dev
+app.name=localhost
+profile.env=test
 
-##### redis #####
-master.redis.ip=rdserver
-master.redis.port=6379
-master.redis.password=FNFl9F2O2Skb8yoKM0jhHA==
-master.redis.max_active=500
-master.redis.max_idle=5
-master.redis.max_wait=10000
-master.redis.timeout=10000
 
-##### zheng-admin #####
-zheng.admin.version=1.0.0
+##### admin #####
+zheng.admin.version=1.0
+
+##### ui web front end #####
+ui.name=ui
+ui.version=1.0
 
 ##### zheng-config #####
 zheng.config.path=http://config.zhangshuzheng.cn:1000/${app.name}/${profile.env}
@@ -24,7 +20,7 @@ zheng.upms.session.id=zheng-upms-server-session-id
 # \u4F1A\u8BDD\u65F6\u957F,\u534A\u5C0F\u65F6\uFF08\u5355\u4F4D\u6BEB\u79D2\uFF09
 zheng.upms.session.timeout=1800000
 # \u5355\u70B9\u767B\u5F55\u8BA4\u8BC1\u4E2D\u5FC3\u5730\u5740
-zheng.upms.sso.server.url=http://upms.zhangshuzheng.cn:1111
+zheng.upms.sso.server.url=http://118.31.60.44:8080/server
 # \u767B\u5F55\u6210\u529F\u56DE\u8C03\u5730\u5740
 zheng.upms.successUrl=/manage/index
 # \u672A\u6388\u6743\u5730\u5740
@@ -34,3 +30,14 @@ zheng.upms.rememberMe.timeout=2592000
 
 ##### zheng-oss #####
 zheng.oss.aliyun.oss.policy=http://oss.zhangshuzheng.cn:7771/aliyun/oss/policy
+
+##### jdbc #####
+datasource.master.jdbc.driver=com.mysql.jdbc.Driver
+datasource.master.jdbc.url=jdbc\:mysql\://localhost\:3306/activiti?useUnicode\=true&characterEncoding\=utf-8&autoReconnect\=true
+datasource.master.jdbc.username=plaza
+datasource.master.jdbc.password=g05kxoKAa+qzODorZjj0EQ==
+datasource.slave.jdbc.driver=com.mysql.jdbc.Driver
+datasource.slave.jdbc.url=jdbc\:mysql\://localhost\:3306/activiti?useUnicode\=true&characterEncoding\=utf-8&autoReconnect\=true
+datasource.slave.jdbc.username=plaza
+datasource.slave.jdbc.password=g05kxoKAa+qzODorZjj0EQ==
+
