--- a/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/src/main/webapp/WEB-INF/web.xml
@@ -81,6 +81,16 @@
         <session-timeout>30</session-timeout>
     </session-config>
 
+    <!-- 跨域配置 -->
+    <filter>
+        <filter-name>cors</filter-name>
+        <filter-class>com.zheng.upms.server.filter.CorsFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>cors</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <!-- 欢迎页面 -->
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
