--- a/server/src/main/resources/profiles/test.properties
+++ b/server/src/main/resources/profiles/test.properties
@@ -20,7 +20,7 @@ zheng.upms.session.id=zheng-upms-server-session-id
 # \u4F1A\u8BDD\u65F6\u957F,\u534A\u5C0F\u65F6\uFF08\u5355\u4F4D\u6BEB\u79D2\uFF09
 zheng.upms.session.timeout=1800000
 # \u5355\u70B9\u767B\u5F55\u8BA4\u8BC1\u4E2D\u5FC3\u5730\u5740
-zheng.upms.sso.server.url=http://localhost:1111
+zheng.upms.sso.server.url=http://localhost:1111/server
 # \u767B\u5F55\u6210\u529F\u56DE\u8C03\u5730\u5740
 zheng.upms.successUrl=/manage/index
 # \u672A\u6388\u6743\u5730\u5740
@@ -33,11 +33,14 @@ zheng.oss.aliyun.oss.policy=http://oss.zhangshuzheng.cn:7771/aliyun/oss/policy
 
 ##### jdbc #####
 datasource.master.jdbc.driver=com.mysql.jdbc.Driver
-datasource.master.jdbc.url=jdbc\:mysql\://118.31.60.44\:3306/activiti?useUnicode\=true&characterEncoding\=utf-8&autoReconnect\=true
+datasource.master.jdbc.url=jdbc\:mysql\://192.168.0.128\:3306/activiti?useUnicode\=true&characterEncoding\=utf-8&autoReconnect\=true
 datasource.master.jdbc.username=plaza
 datasource.master.jdbc.password=g05kxoKAa+qzODorZjj0EQ==
 datasource.slave.jdbc.driver=com.mysql.jdbc.Driver
-datasource.slave.jdbc.url=jdbc\:mysql\://118.31.60.44\:3306/activiti?useUnicode\=true&characterEncoding\=utf-8&autoReconnect\=true
+datasource.slave.jdbc.url=jdbc\:mysql\://192.168.0.128\:3306/activiti?useUnicode\=true&characterEncoding\=utf-8&autoReconnect\=true
 datasource.slave.jdbc.username=plaza
 datasource.slave.jdbc.password=g05kxoKAa+qzODorZjj0EQ==
+
+
+chqsurl=http://localhost:9000/chunhuaqiushi/
 
