--- a/server/src/main/resources/profiles/dev.properties
+++ b/server/src/main/resources/profiles/dev.properties
@@ -41,4 +41,4 @@ datasource.slave.jdbc.url=jdbc\:mysql\://localhost\:3306/activiti?useUnicode\=tr
 datasource.slave.jdbc.username=plaza
 datasource.slave.jdbc.password=g05kxoKAa+qzODorZjj0EQ==
 
-chqsurl="http://localhost:8080/chunhuaqiushi/"
+chqsurl=http://localhost:8080/chunhuaqiushi/
