查询和指派任务人员修改（格式，删meetingid）

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -64,6 +64,12 @@
             </activation>
         </profile>
         <profile>
+            <id>dev2</id>
+            <properties>
+                <env>dev2</env>
+            </properties>
+        </profile>
+        <profile>
             <id>test</id>
             <properties>
                 <env>test</env>
