--- a/server/src/main/resources/profiles/test.properties
+++ b/server/src/main/resources/profiles/test.properties
@@ -41,6 +41,15 @@ datasource.slave.jdbc.url=jdbc\:mysql\://192.168.0.128\:3306/activiti?useUnicode
 datasource.slave.jdbc.username=plaza
 datasource.slave.jdbc.password=g05kxoKAa+qzODorZjj0EQ==
 
+#datasource.master.jdbc.driver=com.mysql.jdbc.Driver
+#datasource.master.jdbc.url=jdbc\:mysql\://118.31.60.44\:3306/activiti?useUnicode\=true&characterEncoding\=utf-8&autoReconnect\=true
+#datasource.master.jdbc.username=plaza
+#datasource.master.jdbc.password=g05kxoKAa+qzODorZjj0EQ==
+#datasource.slave.jdbc.driver=com.mysql.jdbc.Driver
+#datasource.slave.jdbc.url=jdbc\:mysql\://118.31.60.44\:3306/activiti?useUnicode\=true&characterEncoding\=utf-8&autoReconnect\=true
+#datasource.slave.jdbc.username=plaza
+#datasource.slave.jdbc.password=g05kxoKAa+qzODorZjj0EQ==
+
 
 chqsurl=http://localhost:9000/chunhuaqiushi/
 
