--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <mybatis-ehcache.version>1.0.0</mybatis-ehcache.version>
         <ehcache.version>2.10.0</ehcache.version>
         <shiro.version>1.3.2</shiro.version>
+        <quartz.version>2.2.1</quartz.version>
 
         <thymeleaf.version>3.0.3.RELEASE</thymeleaf.version>
     </properties>
