为每个新的参会人员启动相应流程;增加新的datasource配置

--- a/server/src/main/resources/jdbc.properties
+++ b/server/src/main/resources/jdbc.properties
@@ -6,7 +6,8 @@ slave.jdbc.driver=${datasource.slave.jdbc.driver}
 slave.jdbc.url=${datasource.master.jdbc.url}
 slave.jdbc.username=${datasource.master.jdbc.username}
 slave.jdbc.password=${datasource.master.jdbc.password}
-#slave.jdbc.driver=${datasource.slave.jdbc.driver}
-#slave.jdbc.url=${datasource.slave.jdbc.url}
-#slave.jdbc.username=${datasource.slave.jdbc.username}
-#slave.jdbc.password=${datasource.slave.jdbc.password}
+
+external1.jdbc.driver=${datasource.external1.jdbc.driver}
+external1.jdbc.url=${datasource.external1.jdbc.url}
+external1.jdbc.username=${datasource.external1.jdbc.username}
+external1.jdbc.password=${datasource.external1.jdbc.password}
