--- a/server/src/main/resources/profiles/dev.properties
+++ b/server/src/main/resources/profiles/dev.properties
@@ -41,4 +41,12 @@ datasource.slave.jdbc.url=jdbc\:mysql\://localhost\:3306/activiti?useUnicode\=tr
 datasource.slave.jdbc.username=plaza
 datasource.slave.jdbc.password=g05kxoKAa+qzODorZjj0EQ==
 
+
+datasource.external1.jdbc.driver=com.mysql.jdbc.Driver
+datasource.external1.jdbc.url=jdbc\:mysql\://118.31.60.44\:3306/activiti?useUnicode\=true&characterEncoding\=utf-8&autoReconnect\=true
+datasource.external1.jdbc.username=plaza
+datasource.external1.jdbc.password=g05kxoKAa+qzODorZjj0EQ==
+
+
+
 chqsurl=http://localhost:8080/chunhuaqiushi/
