--- a/server/src/main/resources/profiles/dev.properties
+++ b/server/src/main/resources/profiles/dev.properties
@@ -43,7 +43,7 @@ datasource.slave.jdbc.password=g05kxoKAa+qzODorZjj0EQ==
 
 
 datasource.external1.jdbc.driver=com.mysql.jdbc.Driver
-datasource.external1.jdbc.url=jdbc\:mysql\://118.31.60.44\:3306/activiti?useUnicode\=true&characterEncoding\=utf-8&autoReconnect\=true
+datasource.external1.jdbc.url=jdbc\:mysql\://localhost\:3306/activiti?useUnicode\=true&characterEncoding\=utf-8&autoReconnect\=true
 datasource.external1.jdbc.username=plaza
 datasource.external1.jdbc.password=g05kxoKAa+qzODorZjj0EQ==
 
