--- a/common/pom.xml
+++ b/common/pom.xml
@@ -294,6 +294,12 @@
 		    <artifactId>quartz</artifactId>
 		    <version>${quartz.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.12</version>
+		</dependency>
 	    
         <!-- servlet -->
         <dependency>
