mybatis添加读取外部表的功能

--- a/server/src/main/resources/profiles/test.properties
+++ b/server/src/main/resources/profiles/test.properties
@@ -50,6 +50,11 @@ datasource.slave.jdbc.url=jdbc\:mysql\://118.31.60.44\:3306/activiti?useUnicode\
 datasource.slave.jdbc.username=plaza
 datasource.slave.jdbc.password=g05kxoKAa+qzODorZjj0EQ==
 
+datasource.external1.jdbc.driver=com.mysql.jdbc.Driver
+datasource.external1.jdbc.url=jdbc\:mysql\://118.31.60.44\:3306/activiti?useUnicode\=true&characterEncoding\=utf-8&autoReconnect\=true
+datasource.external1.jdbc.username=plaza
+datasource.external1.jdbc.password=g05kxoKAa+qzODorZjj0EQ==
+
 
 chqsurl=http://localhost:9000/chunhuaqiushi/
 
