--- a/server/src/main/resources/profiles/test.properties
+++ b/server/src/main/resources/profiles/test.properties
@@ -55,6 +55,11 @@ datasource.external1.jdbc.url=jdbc\:mysql\://118.31.60.44\:3306/activiti?useUnic
 datasource.external1.jdbc.username=plaza
 datasource.external1.jdbc.password=g05kxoKAa+qzODorZjj0EQ==
 
+#datasource.external1.jdbc.driver=com.microsoft.jdbc.sqlserver.SQLServerDriver
+#datasource.external1.jdbc.url=jdbc:sqlserver://c.huiyi.net:1433;databaseName=meet;user=sa;password=love+wuchan=love66666
+#datasource.external1.jdbc.username=sa
+#datasource.external1.jdbc.password=love+wuchan=love66666
+
 
 chqsurl=http://localhost:9000/chunhuaqiushi/
 
